// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<ul
  className="a b c d e f g h i j k l m n o p q r s t u v w x y"
  role="menu"
>
  Dropdown
</ul>
`;

exports[`should render 2`] = `
"
@-webkit-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@-moz-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

.a {
  position: absolute
}

.b {
  z-index: 1
}

.c {
  min-width: 10.66667rem
}

.d {
  margin: 0.5em 0 0
}

.e {
  padding: 0.33333rem 0
}

.f {
  list-style: none
}

.g {
  background: #fff
}

.h {
  border: 1px solid #dedede
}

.i {
  border-radius: 2px
}

.j {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2)
}

.k {
  left: initial
}

.l {
  right: initial
}

.m {
  animation-name: k1
}

.n {
  animation-duration: 150ms;
  -webkit-animation-duration: 150ms
}

.o {
  animation-timing-function: ease-out;
  -webkit-animation-timing-function: ease-out
}

.p::before {
  content: ''
}

.q::before {
  display: block
}

.r::before {
  position: absolute
}

.s::before {
  bottom: 100%
}

.t::before {
  border: solid transparent
}

.u::before {
  border-width: 10px
}

.v::before {
  border-top-width: 0px
}

.w::before {
  border-bottom-color: #fff
}

.x::before {
  left: initial
}

.y::before {
  right: initial
}
"
`;

exports[`should render with align 1`] = `
<ul
  className="a b c d e f g h i j k l m n o p q r s t u v w x y"
  role="menu"
>
  Dropdown
</ul>
`;

exports[`should render with align 2`] = `
"
@-webkit-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@-moz-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

.a {
  position: absolute
}

.b {
  z-index: 1
}

.c {
  min-width: 10.66667rem
}

.d {
  margin: 0.5em 0 0
}

.e {
  padding: 0.33333rem 0
}

.f {
  list-style: none
}

.g {
  background: #fff
}

.h {
  border: 1px solid #dedede
}

.i {
  border-radius: 2px
}

.j {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2)
}

.k {
  left: initial
}

.l {
  right: 0px
}

.m {
  animation-name: k1
}

.n {
  animation-duration: 150ms;
  -webkit-animation-duration: 150ms
}

.o {
  animation-timing-function: ease-out;
  -webkit-animation-timing-function: ease-out
}

.p::before {
  content: ''
}

.q::before {
  display: block
}

.r::before {
  position: absolute
}

.s::before {
  bottom: 100%
}

.t::before {
  border: solid transparent
}

.u::before {
  border-width: 10px
}

.v::before {
  border-top-width: 0px
}

.w::before {
  border-bottom-color: #fff
}

.x::before {
  left: initial
}

.y::before {
  right: 10px
}
"
`;
